Added Project Skeleton

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="icon" href="images/favicon.ico">
     
     <title>Computer Solutions</title>
+
+    <!--Custom Stylesheet for Computer Solutions-->
+	<link href="css/style.css" rel="stylesheet">
   </head>
   <body>
   </body>
