--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="js/jquery.min.js"></script>
+
   	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="js/bootstrap.min.js"></script>
-
+	<!-- Custom JavaScript File -->
+	<script src="js/script.js"></script>
   </body>
 </html>
