--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="js/jquery.min.js"></script>
-
+	<!-- Latest compiled and minified AngularJS Framework -->
+	<script src="js/angular.min.js"></script>
+	<script src="js/angular-route.min.js"></script>
   	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="js/bootstrap.min.js"></script>
 	<!-- Custom JavaScript File -->
