--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
     <!-- Latest compiled and minified Bootstrap CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
-
+	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+	<link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+	<!-- Styles for Justified nav template -->
+	<link href="css/justified-nav.css" rel="stylesheet">
     <!--Custom Stylesheet for Computer Solutions-->
 	<link href="css/style.css" rel="stylesheet">
 
@@ -26,7 +29,59 @@
 	<![endif]-->
   </head>
   <body>
+	<div class="container">
 
+		<!-- The justified navigation menu is meant for single line per list item.
+		Multiple lines will require custom code not provided by Bootstrap. -->
+		<div class="masthead">
+			<h3 class="text-muted">Computer Solutions</h3>
+			<nav>
+				<ul class="nav nav-justified">
+					<li class="active"><a href="index.html">Home</a></li>
+					<li><a href="pages/services.html">Services</a></li>
+					<li><a href="pages/about.html">About</a></li>
+					<li><a href="pages/contact.html">Contact</a></li>
+				</ul>
+			</nav>
+		</div>
+
+		<!-- Jumbotron -->
+		<div class="jumbotron">
+			<div class="row">
+				<div class="col-md-4">
+					<img src="http://techguystaging.com/files/computer-icon.png">
+				</div>
+				<div class="col-md-8">
+					<h1>Computer Solutions</h1>
+					<p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. 
+									Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum 
+									nibh, ut fermentum massa justo sit amet.</p>
+				</div>
+			</div>
+		</div>
+
+		<!-- Example row of columns -->
+		<div class="row">
+			<div class="col-lg-4">
+				<h2>Hardware Repairs</h2>
+				<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+			</div>
+			<div class="col-lg-4">
+				<h2>Virus Removal</h2>
+				<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+			</div>
+			<div class="col-lg-4">
+				<h2>System Cleanup</h2>
+				<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
+			</div>
+		</div>
+
+		<!-- Site footer -->
+		<footer class="footer">
+			<p>&copy; 2016 Computer Solutions, Inc.</p>
+		</footer>
+
+	</div> <!-- /container -->
 
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -36,6 +91,8 @@
 	<script src="js/angular-route.min.js"></script>
   	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="js/bootstrap.min.js"></script>
+	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+	<script src="js/ie10-viewport-bug-workaround.js"></script>
 	<!-- Custom JavaScript File -->
 	<script src="js/script.js"></script>
   </body>
