--- a/pages/services.html
+++ b/pages/services.html
@@ -37,8 +37,8 @@
 			<h3 class="text-muted">Computer Solutions</h3>
 			<nav>
 				<ul class="nav nav-justified">
-					<li class="active"><a href="../index.html">Home</a></li>
-					<li><a href="services.html">Services</a></li>
+					<li><a href="../index.html">Home</a></li>
+					<li class="active"><a href="services.html">Services</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
